Merged the LargePTA and win64 branch into the trunk.
git-svn-id: svn://svn.code.sf.net/p/statechum/code/XMachineTool/trunk@684 4b8d0e13-f52a-0410-bc0e-8c3b9955e25a